unpackaged/main/default/objects/Project__c/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <inlineHelpText>Some Closed Lost details require additional information. For example: if selecting Competition please enter the competitor's name or 'Unknown'.</inlineHelpText>
    <label>Closed Lost Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>