unpackaged/main/default/objects/Project__c/fields/Commit_Override__c.field-meta.xml
<CustomField>
    <fullName>Commit_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please select this box to 'commit' this Project Amount to your forecast.</inlineHelpText>
    <label>Commit Override</label>
    <type>Checkbox</type>
</CustomField>