unpackaged/main/default/objects/Project__c/fields/Contact_MK_Customer_Fit_Segment__c.field-meta.xml
<CustomField>
    <fullName>Contact_MK_Customer_Fit_Segment__c</fullName>
    <formula>Primary_Contact__r.MK_Customer_Fit_Segment__c</formula>
    <label>Contact MK Customer Fit Segment</label>
    <type>Text</type>
</CustomField>