unpackaged/main/default/objects/Project__c/fields/Contact_MK_Likelihood_to_Buy_Segment__c.field-meta.xml
<CustomField>
    <fullName>Contact_MK_Likelihood_to_Buy_Segment__c</fullName>
    <formula>Primary_Contact__r.MK_Likelihood_to_Buy_Segment__c</formula>
    <label>Contact MK Likelihood to Buy Segment</label>
    <type>Text</type>
</CustomField>