unpackaged/main/default/objects/Project__c/fields/Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner__c</fullName>
    <formula>Primary_Contact__r.Owner.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner</label>
    <type>Text</type>
</CustomField>