unpackaged/main/default/objects/Project__c/fields/Created_date__c.field-meta.xml
<CustomField>
    <fullName>Created_date__c</fullName>
    <formula>CreatedDate</formula>
    <label>Project Created Date</label>
    <type>DateTime</type>
</CustomField>