unpackaged/main/default/objects/Project__c/fields/Current_Stage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage_Start_Date__c</fullName>
    <label>Current Stage Start Date</label>
    <type>Date</type>
</CustomField>