unpackaged/main/default/objects/Project__c/fields/Days_In_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Stage__c</fullName>
    <formula>Today() - Current_Stage_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>