unpackaged/main/default/objects/Project__c/fields/Exception_Flag__c.field-meta.xml
<CustomField>
    <fullName>Exception_Flag__c</fullName>
    <formula>if(
and( ispickval( Stage__c ,"New") ,
Age__c  &gt; 4 ),
true,

if(
and( ispickval( Stage__c ,"Initial Engagement") ,
or(
CreatedDate &gt; Primary_Contact_Last_Activity_Date_AM__c,
(today() - Current_Stage_Start_Date__c &gt; 7 &amp;&amp; now() - Primary_Contact_Last_Activity_Date_AM__c &gt; 7 ))),
true,

if(
and( ispickval( Stage__c ,"Negotiation / Revision"),
or(
CreatedDate &gt; Primary_Contact_Last_Activity_Date_AM__c,
(today() - Current_Stage_Start_Date__c &gt; 30 &amp;&amp; now() - Primary_Contact_Last_Activity_Date_AM__c &gt; 30),
isblank( Close_Date__c ) ,
isblank( text(Type__c) ) ,
isblank( Amount__c ) )) ,
true,

if(
and( ispickval( Stage__c ,"Pending Payment") , ispickval(Sub_Stage__c, "Credit Card"),
or(
CreatedDate &gt; Primary_Contact_Last_Activity_Date_AM__c,
(today() - Current_Stage_Start_Date__c &gt; 4 &amp;&amp; now() - Primary_Contact_Last_Activity_Date_AM__c &gt; 4),
isblank( Close_Date__c ) ,
isblank( text(Type__c) ) ,
isblank( Amount__c ) ,
Close_Date__c - today() &lt; 0 ,
Close_Date__c - today() &gt;= 7 ) ),
true,

if(
and( ispickval( Stage__c ,"Pending Payment") , ispickval(Sub_Stage__c, "Purchase Order"),
or(
CreatedDate &gt; Primary_Contact_Last_Activity_Date_AM__c,
now() - Primary_Contact_Last_Activity_Date_AM__c &gt; 14,
isblank( Close_Date__c ) ,
isblank( text(Type__c) ) ,
isblank( Amount__c ) ,
Close_Date__c - today() &lt; 0) ),
true,

false)))))</formula>
    <label>Exception Flag</label>
    <type>Checkbox</type>
</CustomField>