unpackaged/main/default/objects/Project__c/fields/Expected_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Expected_Bookings__c</fullName>
    <formula>Amount__c * Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>