unpackaged/main/default/objects/Project__c/fields/Generic__c.field-meta.xml
<CustomField>
    <fullName>Generic__c</fullName>
    <formula>AccountId__r.Generic_Account__c || AccountId__r.Parent.Generic_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generic</label>
    <type>Checkbox</type>
</CustomField>