unpackaged/main/default/objects/Project__c/fields/has_ordered_CNC_Machining__c.field-meta.xml
<CustomField>
    <fullName>has_ordered_CNC_Machining__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has_ordered_CNC_Machining</label>
    <type>Checkbox</type>
</CustomField>