unpackaged/main/default/objects/Project__c/fields/has_ordered_PolyJet_3D__c.field-meta.xml
<CustomField>
    <fullName>has_ordered_PolyJet_3D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has_ordered_PolyJet_3D</label>
    <type>Checkbox</type>
</CustomField>