unpackaged/main/default/objects/Project__c/fields/has_ordered_SLA__c.field-meta.xml
<CustomField>
    <fullName>has_ordered_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has_ordered_SLA</label>
    <type>Checkbox</type>
</CustomField>