unpackaged/main/default/objects/Project__c/fields/has_quoted_Stamping__c.field-meta.xml
<CustomField>
    <fullName>has_quoted_Stamping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has_quoted_Stamping</label>
    <type>Checkbox</type>
</CustomField>