unpackaged/main/default/objects/Project__c/fields/Hold_Project_to_Prior_Owner__c.field-meta.xml
<CustomField>
    <fullName>Hold_Project_to_Prior_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold Project to Prior Owner</label>
    <type>Checkbox</type>
</CustomField>