unpackaged/main/default/objects/Project__c/fields/IM_Partner_Quoted__c.field-meta.xml
<CustomField>
    <fullName>IM_Partner_Quoted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requested by Chris Brown as a Manual process for PSE</description>
    <inlineHelpText>Indicates that IM was quoted by a Quoting Partner for at least one quote on this project</inlineHelpText>
    <label>IM - Partner Quoted</label>
    <type>Checkbox</type>
</CustomField>