unpackaged/main/default/objects/Project__c/fields/IM_Pre_Sales_DFM_Check__c.field-meta.xml
<CustomField>
    <fullName>IM_Pre_Sales_DFM_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requested by Chris Brown as a Manual process for PSE</description>
    <inlineHelpText>Indicates that an IM DFM was performed at least once for this Project</inlineHelpText>
    <label>IM - Pre-Sales DFM Check</label>
    <type>Checkbox</type>
</CustomField>