unpackaged/main/default/objects/Project__c/fields/IM_Project__c.field-meta.xml
<CustomField>
    <fullName>IM_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IM Project</label>
    <type>Checkbox</type>
</CustomField>