unpackaged/main/default/objects/Project__c/fields/isAmountUpdatedFromOpp__c.field-meta.xml
<CustomField>
    <fullName>isAmountUpdatedFromOpp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal Field to override specific VRs for automation.</description>
    <inlineHelpText>Admin Only Automation Field</inlineHelpText>
    <label>Amount is updated from Opp</label>
    <type>Checkbox</type>
</CustomField>