unpackaged/main/default/objects/Project__c/fields/Last_Opp_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Opp_Created_Date__c</fullName>
    <inlineHelpText>Looking at the Opps on this project, this is the most recent Opp Created Date</inlineHelpText>
    <label>Last Opp Created Date</label>
    <type>DateTime</type>
</CustomField>