unpackaged/main/default/objects/Project__c/fields/Last_Quote_Mod_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Quote_Mod_Date__c</fullName>
    <inlineHelpText>Of the Quotes on this Project (by way of Opps), this is the most recent Last Quote Modification Date in the ERP.</inlineHelpText>
    <label>Last Quote Mod Date</label>
    <type>DateTime</type>
</CustomField>