unpackaged/main/default/objects/Project__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to "Lock" the project and prevent new Opportunities from automatically being added to it.</inlineHelpText>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>