unpackaged/main/default/objects/Project__c/fields/Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_Notes__c</fullName>
    <inlineHelpText>Only visible to Managers</inlineHelpText>
    <label>Manager Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>