unpackaged/main/default/objects/Project__c/fields/Multiple_Manufacturing_Processes__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Manufacturing_Processes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked by Traction if this Project has multiple Opportunities that are not all the same Manufacturing Process</inlineHelpText>
    <label>Multiple Manufacturing Processes</label>
    <type>Checkbox</type>
</CustomField>