unpackaged/main/default/objects/Project__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>