unpackaged/main/default/objects/Project__c/fields/Origin_Project__c.field-meta.xml
<CustomField>
    <fullName>Origin_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Indicates the originating Project that this one is related to. E.g. this production run's Origin Project was where the prototype was made.</inlineHelpText>
    <label>Origin Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Downstream Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>