unpackaged/main/default/objects/Project__c/fields/Primary_Contact_LAD__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_LAD__c</fullName>
    <description>Non-AM LAD for sandbox testing</description>
    <formula>Primary_Contact__r.LastActivityDate</formula>
    <inlineHelpText>Non-AM LAD for sandbox testing</inlineHelpText>
    <label>Primary Contact LAD</label>
    <type>Date</type>
</CustomField>