unpackaged/main/default/objects/Project__c/fields/Primary_Contact_Next_Activity_Date_AM__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Next_Activity_Date_AM__c</fullName>
    <formula>Primary_Contact__r.Next_Activity_Date_AM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Next Activity Date AM</label>
    <type>DateTime</type>
</CustomField>