unpackaged/main/default/objects/Project__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <formula>CASE(Stage__c,
 "New",0.01,
 "Initial Engagement",0.25,
 "Negotiation / Revision",0.50,
 "Pending Payment",0.90,
 "System Reopened",0.99,
 "Closed Lost",0,
 "Closed Won",1,
 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probability (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>