unpackaged/main/default/objects/Project__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <inlineHelpText>A short description of this Project</inlineHelpText>
    <label>Project</label>
    <length>80</length>
    <type>Text</type>
</CustomField>