unpackaged/main/default/objects/Project__c/fields/Project_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Manager__c</fullName>
    <formula>Owner:User.Manager.Full_Name__c</formula>
    <label>Project Owner Manager</label>
    <type>Text</type>
</CustomField>