unpackaged/main/default/objects/Project__c/fields/Project_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Role__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner Role</label>
    <type>Text</type>
</CustomField>