unpackaged/main/default/objects/Project__c/fields/Project_Team_TSE_Members__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_TSE_Members__c</fullName>
    <label>Project Team TSE Members</label>
    <summaryFilterItems>
        <field>Project_Team__c.Team_Role__c</field>
        <operation>equals</operation>
        <value>Technical Sales Engineer</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Team__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>