unpackaged/main/default/objects/Project__c/fields/Quoted_Processes__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Processes__c</fullName>
    <formula>IF(has_quoted_Carbon__c , 'Carbon: ', '') +
IF(has_quoted_CNC_Machining__c ,'CNC Machining: ', '') +
IF(has_quoted_Die_Casting__c ,'Die Casting: ', '') +
IF(has_quoted_DMLS__c,'DMLS: ', '') +
IF(has_quoted_Direct_Sourced__c,'Direct Sourced: ', '') +
IF(has_quoted_Extrusion__c,'Metal Extrusion: ', '') +
IF(has_quoted_HPMultiJetFusion__c,'HP Multi Jet Fusion','') +
IF(has_quoted_Injection_Molding__c,'Injection Molding','') +
IF(has_quoted_PolyJet_3D__c ,'PolyJet 3D','') +
IF(has_quoted_SLS__c,'SLS: ','') +
IF(has_quoted_Sheet_metal__c ,'Sheet Metal: ','') +
IF(has_quoted_Stamping__c ,'Stamping: ','') +
IF(has_quoted_SLA__c , 'SLA: ','') +
IF(has_quoted_Urethane_Casting__c,'Urethane Casting: ','')</formula>
    <label>Quoted Processes</label>
    <type>Text</type>
</CustomField>