unpackaged/main/default/objects/Project__c/fields/Safe_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_Contact_ID__c</fullName>
    <formula>CASESAFEID(  Primary_Contact__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Contact ID</label>
    <type>Text</type>
</CustomField>