unpackaged/main/default/objects/Project__c/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <label>Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Stage</valueSetName>
    </valueSet>
</CustomField>