unpackaged/main/default/objects/Project__c/fields/Sub_Stage_Details__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage_Details__c</fullName>
    <label>Sub Stage Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Stage_Details</valueSetName>
    </valueSet>
</CustomField>