unpackaged/main/default/objects/Project__c/fields/today_ambition__c.field-meta.xml
<CustomField>
    <fullName>today_ambition__c</fullName>
    <formula>today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>today_ambition</label>
    <type>Date</type>
</CustomField>