unpackaged/main/default/objects/Project__c/fields/Top_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Top_Account_Id__c</fullName>
    <formula>IF(!ISBLANK(AccountId__r.ParentId),CASESAFEID(AccountId__r.ParentId),CASESAFEID(AccountId__c))</formula>
    <label>Top Account Id</label>
    <type>Text</type>
</CustomField>