unpackaged/main/default/objects/Project__c/fields/Top_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Top_Account_Owner__c</fullName>
    <formula>IF(!ISBLANK(AccountId__r.ParentId),AccountId__r.Parent.Owner_ID_Name__c,AccountId__r.Owner_ID_Name__c)</formula>
    <label>Top Account Owner</label>
    <type>Text</type>
</CustomField>