unpackaged/main/default/objects/Project__c/fields/Tracker_Flag__c.field-meta.xml
<CustomField>
    <fullName>Tracker_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to add this flag to the Tracker Report</inlineHelpText>
    <label>[decommish] Tracker Flag</label>
    <type>Checkbox</type>
</CustomField>