unpackaged/main/default/objects/Project__c/fields/Traction_Created__c.field-meta.xml
<CustomField>
    <fullName>Traction_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Traction Created</label>
    <type>Checkbox</type>
</CustomField>