unpackaged/main/default/objects/Project__c/fields/Traction_IM_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Traction_IM_Project_Name__c</fullName>
    <formula>"IM - " + Name</formula>
    <label>Traction IM Project Name</label>
    <type>Text</type>
</CustomField>