unpackaged/main/default/objects/Project__c/fields/TSE_Notes__c.field-meta.xml
<CustomField>
    <fullName>TSE_Notes__c</fullName>
    <inlineHelpText>Only visible to Managers and TSEs</inlineHelpText>
    <label>TSE Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>