unpackaged/main/default/objects/Project__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Off</fullName>
            </value>
            <value>
                <fullName>Prototype</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Prototype &amp; Production</fullName>
            </value>
            <value>
                <fullName>Reorder</fullName>
            </value>
            <value>
                <fullName>Tooling</fullName>
            </value>
            <value>
                <fullName>Punchout</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>SOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>