unpackaged/main/default/objects/Project__c/recordTypes/Enterprise_Offering.recordType-meta.xml
<RecordType>
    <fullName>Enterprise_Offering</fullName>
    <active>true</active>
    <description>Project record type for Enterprise offerings such as Punchout, MSA, SOW etc</description>
    <label>Enterprise Offering</label>
</RecordType>