unpackaged/main/default/objects/Project__c/recordTypes/X3D.recordType-meta.xml
<RecordType>
    <fullName>X3D</fullName>
    <active>true</active>
    <label>3D</label>
</RecordType>