unpackaged/main/default/objects/Project__c/validationRules/NR_and_PP_Requirements.validationRule-meta.xml
<ValidationRule>
    <fullName>NR_and_PP_Requirements</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name = "3D" &amp;&amp;

ISCHANGED(Stage__c) &amp;&amp;
(
 ISPICKVAL(Stage__c,"Negotiation / Revision") ||
 ISPICKVAL(Stage__c,"Pending Payment")
) &amp;&amp;
(
 ISBLANK(Close_Date__c) ||
 ISPICKVAL(Type__c,"") ||
 ISBLANK(Amount__c) ||
 Amount__c = 0
)

&amp;&amp; !ISCHANGED(Manager_Notes__c)
&amp;&amp; NOT(isAmountUpdatedFromOpp__c)

&amp;&amp; !$Permission.Ignore_All_VR
&amp;&amp; !$Permission.Ignore_Opp_VR</errorConditionFormula>
    <errorMessage>For Projects in Negotiation / Revision and Pending Payment: Close Date, Type and Amount are all required (and Amount can not be 0)</errorMessage>
</ValidationRule>