unpackaged/main/default/objects/Project__c/validationRules/Pending_Requirements.validationRule-meta.xml
<ValidationRule>
    <fullName>Pending_Requirements</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name = "3D" &amp;&amp;

ISCHANGED(Stage__c) &amp;&amp;
ISPICKVAL(Stage__c, "Pending Payment") &amp;&amp;

(
 Close_Date__c - TODAY() &lt; 0 ||
 Close_Date__c - TODAY() &gt; 14
)

&amp;&amp; !ISCHANGED(Manager_Notes__c)
&amp;&amp; NOT(isAmountUpdatedFromOpp__c)

&amp;&amp; !$Permission.Ignore_All_VR
&amp;&amp; !$Permission.Ignore_Opp_VR</errorConditionFormula>
    <errorMessage>In order to put the Stage into Pending Payment, the Close Date must be within 14 days from today.</errorMessage>
</ValidationRule>