unpackaged/main/default/objects/Project__c/listViews/All_My_Open_Projects.listView-meta.xml
<ListView>
    <fullName>All_My_Open_Projects</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Primary_Contact_Last_Activity_Date_AM__c</columns>
    <columns>Locked__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Closed Lost,Closed Won</value>
    </filters>
    <label>All My Open Projects</label>
</ListView>