unpackaged/main/default/objects/Project__c/listViews/All_My_Projects.listView-meta.xml
<ListView>
    <fullName>All_My_Projects</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Primary_Contact_Last_Activity_Date_AM__c</columns>
    <columns>Locked__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.X3D</value>
    </filters>
    <label>All My Projects</label>
</ListView>