unpackaged/main/default/objects/Project__c/listViews/All_Projects.listView-meta.xml
<ListView>
    <fullName>All_Projects</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Amount__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Current_Stage_Start_Date__c</columns>
    <columns>Last_Opp_Created_Date__c</columns>
    <columns>Last_Quote_Mod_Date__c</columns>
    <columns>Primary_Contact_Last_Activity_Date_AM__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
</ListView>